--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "streamlit",
     "watchdog",
     "matplotlib",
-    "urllib3<2.0.0",
+    "altair!=5.4.0,!=5.4.1,<6,>=4.0",
+    "seaborn",
     "optuna"
 ]
 
