--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,11 @@ dependencies = [
     "seaborn>=0.12.0",
     "mlflow>=2.0.0",
     "pydantic>=2.0.0",
+    "geopy>=2.0.0",
+    "openai>=1.0.0",
+    "google-generativeai>=0.3.0",
+    "python-dotenv>=1.0.0",
+    "urllib3<2.0.0",
 ]
 
 [project.optional-dependencies]
