--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ dependencies = [
     "google-generativeai>=0.3.0",
     "python-dotenv>=1.0.0",
     "urllib3<2.0.0",
+    "langgraph>=0.2.0",
+    "langchain>=0.3.0",
+    "langchain-openai>=0.2.0",
+    "langchain-google-genai>=2.0.0",
 ]
 
 [project.optional-dependencies]
