--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,42 @@
 # Python
 __pycache__/
 *.py[cod]
+*.pyo
 *$py.class
+*.so
+.Python
+
+# Virtual environments
 .venv/
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# Testing
 .pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
+*.cover
 
 # IDE/Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .cursorrules
+.project
+.pydevproject
+.settings/
 
 # Mac
 .DS_Store
+.AppleDouble
+.LSOverride
 
 # Artifacts in root
 /*.pkl
@@ -20,6 +47,7 @@ __pycache__/
 *.egg-info/
 dist/
 build/
+*.egg
 
 # Documentation
 *.md
@@ -33,3 +61,14 @@ mlruns/
 
 # Secrets
 .env
+.env.local
+.env.*.local
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
