--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,3 +13,11 @@ mypy>=1.0.0,<2.0.0
 # Linting
 ruff>=0.1.0,<1.0.0
 
+# Code formatting
+black>=23.0.0,<24.0.0
+isort>=5.12.0,<6.0.0
+
+# Security scanning
+bandit>=1.7.0,<2.0.0
+pip-audit>=2.6.0,<3.0.0
+
