add performance tracking

--- a/mypy.ini
+++ b/mypy.ini
@@ -60,13 +60,33 @@ ignore_missing_imports = True
 [mypy-google.generativeai.*]
 ignore_missing_imports = True
 
+[mypy-google.*]
+ignore_missing_imports = True
+
 [mypy-openai.*]
+ignore_missing_imports = True
+
+[mypy-requests.*]
 ignore_missing_imports = True
 
 [mypy-dotenv.*]
 ignore_missing_imports = True
 
+[mypy-pydantic]
+ignore_missing_imports = True
+
+[mypy-pydantic.*]
+ignore_missing_imports = False
+
+[mypy-fastapi.*]
+ignore_missing_imports = True
+
+[mypy-pythonjsonlogger.*]
+ignore_missing_imports = True
+
+[mypy-urllib3.util.retry.*]
+ignore_missing_imports = True
+
 # Exclude test files from strict checking
 [mypy-tests.*]
 ignore_errors = True
-
