--- a/mypy.ini
+++ b/mypy.ini
@@ -93,6 +93,9 @@ ignore_missing_imports = True
 [mypy-urllib3.util.retry.*]
 ignore_missing_imports = True
 
+[mypy-cachetools.*]
+ignore_missing_imports = True
+
 # Exclude test files from strict checking
 [mypy-tests.*]
 ignore_errors = True
