--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,9 +6,11 @@
 # Testing
 pytest>=7.0.0,<8.0.0
 pytest-cov>=4.0.0,<5.0.0
+pytest-asyncio>=0.21.0,<1.0.0
 
 # Type checking
 mypy>=1.0.0,<2.0.0
+types-cachetools>=5.3.0,<6.0.0
 types-requests>=2.31.0,<3.0.0
 types-python-json-logger>=2.0.0,<3.0.0
 
