--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,9 @@ dependencies = [
 dev = [
     "pytest",
     "pytest-cov>=4.0.0",
+    "pytest-asyncio>=0.21.0,<1.0.0",
     "mypy>=1.0.0",
+    "types-cachetools>=5.3.0",
     "ruff>=0.1.0",
     "black>=23.0.0",
     "isort>=5.12.0",
@@ -70,6 +72,7 @@ include = ["src*"]
 testpaths = ["tests"]
 pythonpath = "."
 addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
+asyncio_mode = "auto"
 
 [tool.black]
 line-length = 100
