--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ google-generativeai>=0.3.0,<1.0.0
 # Utilities
 python-dotenv>=1.0.0,<2.0.0
 urllib3>=2.0.0
+cachetools>=5.3.0,<6.0.0
 
 # LangChain ecosystem
 langgraph>=0.2.0,<1.0.0
