--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,12 @@ requires-python = ">=3.9,<3.13"
 # For reproducible builds, see requirements.txt with pinned versions
 # Tested with Python 3.12 (see CI matrix)
 dependencies = [
+    "numpy>=2.3.5",
     "xgboost>=2.0.0",
     "pandas>=2.0.0",
     "scikit-learn>=1.3.0",
     "optuna>=3.0.0",
-    "streamlit>=1.28.0",
+    "streamlit>=1.52.0",
     "matplotlib>=3.7.0",
     "seaborn>=0.12.0",
     "mlflow>=2.0.0",
