--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,14 @@
 # Update these versions after testing new releases
 
 # Core ML libraries
+numpy>=2.3.5,<3.0.0
 xgboost>=2.0.0,<3.0.0
 pandas>=2.0.0,<3.0.0
 scikit-learn>=1.3.0,<2.0.0
 optuna>=3.0.0,<4.0.0
 
 # Web framework
-streamlit>=1.28.0,<2.0.0
+streamlit>=1.52.0,<2.0.0
 
 # Visualization
 matplotlib>=3.7.0,<4.0.0
